# aws-sg-ip-sync

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: aws.rs  config.rs  error.rs  ip.rs  main.rs  user.rs
